Moving back to BUDDY since CUDD can't handle this use case.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,13 +2,13 @@ INC=.
 SRC=.
 OBJ=.
 OUT=.
-BDD=CUDD
+BDD=BUDDY
+#BDD=CUDD
 
-#LBDD=/usr/local/lib/libbdd.a
-LBDD=/usr/local/lib/libcudd.a /usr/local/lib/libepd.a /usr/local/lib/libutil.a /usr/local/lib/libmtr.a /usr/local/lib/libst.a
+LBDD=/usr/local/lib/libbdd.a
+#LBDD=/usr/local/lib/libcudd.a /usr/local/lib/libepd.a /usr/local/lib/libutil.a /usr/local/lib/libmtr.a /usr/local/lib/libst.a
 
 CC=clang
-# g++ -I/usr/local/include myfile.cc -o myfile -L/usr/local/lib -lbdd
 CFLAGS=-std=c99 -I/usr/local/include -I$(INC) -D$(BDD) -Wno-initializer-overrides -O3
 LDFLAGS=-O3
 
