Splitting out code for cudd and buddy into two different executables.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,30 +2,43 @@ INC=.
 SRC=.
 OBJ=.
 OUT=.
-BDD=BUDDY
-#BDD=CUDD
 
-LBDD=/usr/local/lib/libbdd.a
-#LBDD=/usr/local/lib/libcudd.a /usr/local/lib/libepd.a /usr/local/lib/libutil.a /usr/local/lib/libmtr.a /usr/local/lib/libst.a
+LBDD_BUDDY=/usr/local/lib/libbdd.a
+LBDD_CUDD=/usr/local/lib/libcudd.a /usr/local/lib/libepd.a /usr/local/lib/libutil.a /usr/local/lib/libmtr.a /usr/local/lib/libst.a
 
 CC=clang
-#CFLAGS=-std=c99 -I/usr/local/include -I$(INC) -D$(BDD) -Wno-initializer-overrides -O3
-CFLAGS=-std=c99 -I/usr/local/include -I$(INC) -D$(BDD) -Wno-initializer-overrides -g
+CFLAGS=-std=c99 -I/usr/local/include -I$(INC) -Wno-initializer-overrides -O3
+#CFLAGS=-std=c99 -I/usr/local/include -I$(INC) -D$(BDD) -Wno-initializer-overrides -g
 LDFLAGS=-O3
 
 DEPS=$(INC)/parse_cl.h $(INC)/types.h
-OBJS=$(OBJ)/parse_cl.o $(OBJ)/main.o
+OBJS_BUDDY=$(OBJ)/parse_cl.o $(OBJ)/main_buddy.o $(OBJ)/bdd_buddy.o
+OBJS_CUDD=$(OBJ)/parse_cl.o $(OBJ)/main_cudd.o $(OBJ)/bdd_cudd.o
 
-%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+all: $(OUT)/bitbuddy_b $(OUT)/bitbuddy_c
 
-$(OUT)/bitbuddy: $(OBJS)
-	$(CC) -o $(OUT)/$@ $^ $(LBDD) $(LDFLAGS)
+bdd_buddy.o: bdd_buddy.c bdd_buddy.h $(DEPS)
+	$(CC) -c -c -DBUDDY -o $@ $< $(CFLAGS)
+
+bdd_cudd.o: bdd_cudd.c bdd_cudd.h $(DEPS)
+	$(CC) -c -c -DCUDD -o $@ $< $(CFLAGS)
+
+main_buddy.o: main.c bdd_buddy.h $(DEPS)
+	$(CC) -c -DBUDDY -o $@ $< $(CFLAGS)
+
+main_cudd.o: main.c bdd_cudd.h $(DEPS)
+	$(CC) -c -DCUDD -o $@ $< $(CFLAGS)
+
+$(OUT)/bitbuddy_b: $(OBJS_BUDDY)
+	$(CC) -o $(OUT)/$@ $^ $(LBDD_BUDDY) -DBUDDY $(LDFLAGS)
+
+$(OUT)/bitbuddy_c: $(OBJS_CUDD)
+	$(CC) -o $(OUT)/$@ $^ $(LBDD_CUDD) -DCUDD $(LDFLAGS)
 
 .PHONY: clean
 
 clean:
-	rm -f *.o $(OUT)/bitbuddy
+	rm -f *.o $(OUT)/bitbuddy_*
 
 blif:
 	rm -f *.blif
