Removing ithVar variable, fixing inversion for sylvan and cleaning up Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,9 +9,10 @@ LBDD_CUDD=/usr/local/lib/libcudd.a /usr/local/lib/libepd.a /usr/local/lib/libuti
 LBDD_SYLVAN=/usr/local/lib/libsylvan.a -lpthread -lm
 
 CC=clang
-#CFLAGS=-std=gnu11 -I/usr/local/include -I$(INC) -Wno-initializer-overrides -O3
-CFLAGS=-std=gnu11 -I/usr/local/include -I$(INC) -Wno-initializer-overrides -g
+CFLAGS=-std=gnu11 -I/usr/local/include -I$(INC) -Wno-initializer-overrides -O3
 LDFLAGS=-O3
+#CFLAGS=-std=gnu11 -I/usr/local/include -I$(INC) -Wno-initializer-overrides -g
+#LDFLAGS=-g
 
 DEPS=$(INC)/parse_cl.h $(INC)/types.h
 OBJS_ABCD=$(OBJ)/parse_cl.o $(OBJ)/main_abcd.o $(OBJ)/bdd_abcd.o
