Adding CUDD's zdd.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,7 @@ LBDD_ABCD=/usr/local/lib/libabcd.a
 LBDD_BUDDY=/usr/local/lib/libbdd.a
 LBDD_CAL=/usr/local/lib/libcal.a
 LBDD_CUDD=/usr/local/lib/libcudd.a /usr/local/lib/libepd.a /usr/local/lib/libutil.a /usr/local/lib/libmtr.a /usr/local/lib/libst.a
+LBDD_ZCUDD=$(LBDD_CUDD)
 LBDD_SDD=/usr/local/lib/libsdd.a
 LBDD_SYLVAN=/usr/local/lib/libsylvan.a -lpthread -lm
 
@@ -21,10 +22,11 @@ OBJS_ABCD=$(OBJ)/parse_cl.o $(OBJ)/main_abcd.o $(OBJ)/bdd_abcd.o
 OBJS_BUDDY=$(OBJ)/parse_cl.o $(OBJ)/main_buddy.o $(OBJ)/bdd_buddy.o
 OBJS_CAL=$(OBJ)/parse_cl.o $(OBJ)/main_cal.o $(OBJ)/bdd_cal.o
 OBJS_CUDD=$(OBJ)/parse_cl.o $(OBJ)/main_cudd.o $(OBJ)/bdd_cudd.o
+OBJS_ZCUDD=$(OBJ)/parse_cl.o $(OBJ)/main_zcudd.o $(OBJ)/zdd_cudd.o
 OBJS_SYLVAN=$(OBJ)/parse_cl.o $(OBJ)/main_sylvan.o $(OBJ)/bdd_sylvan.o
 OBJS_SDD=$(OBJ)/parse_cl.o $(OBJ)/main_sdd.o $(OBJ)/bdd_sdd.o
 
-all: $(OUT)/bitbuddy_a $(OUT)/bitbuddy_b $(OUT)/bitbuddy_c $(OUT)/bitbuddy_d $(OUT)/bitbuddy_l $(OUT)/bitbuddy_s
+all: $(OUT)/bitbuddy_a $(OUT)/bitbuddy_b $(OUT)/bitbuddy_c $(OUT)/bitbuddy_d $(OUT)/bitbuddy_l $(OUT)/bitbuddy_s $(OUT)/bitbuddy_z
 
 bdd_abcd.o: bdd_abcd.c bdd_abcd.h $(DEPS)
 	$(CC) -c -c -DABCD -o $@ $< $(CFLAGS)
@@ -37,6 +39,9 @@ bdd_cal.o: bdd_cal.c bdd_cal.h $(DEPS)
 
 bdd_cudd.o: bdd_cudd.c bdd_cudd.h $(DEPS)
 	$(CC) -c -c -DCUDD -o $@ $< $(CFLAGS)
+
+zdd_cudd.o: zdd_cudd.c zdd_cudd.h $(DEPS)
+	$(CC) -c -c -DZCUDD -o $@ $< $(CFLAGS)
 
 bdd_sdd.o: bdd_sdd.c bdd_sdd.h $(DEPS)
 	$(CC) -c -c -DSDD -o $@ $< $(CFLAGS)
@@ -56,6 +61,9 @@ main_cal.o: main.c bdd_cal.h $(DEPS)
 main_cudd.o: main.c bdd_cudd.h $(DEPS)
 	$(CC) -c -DCUDD -o $@ $< $(CFLAGS)
 
+main_zcudd.o: main.c zdd_cudd.h $(DEPS)
+	$(CC) -c -DZCUDD -o $@ $< $(CFLAGS)
+
 main_sdd.o: main.c bdd_sdd.h $(DEPS)
 	$(CC) -c -DSDD -o $@ $< $(CFLAGS)
 
@@ -70,6 +78,9 @@ $(OUT)/bitbuddy_b: $(OBJS_BUDDY)
 
 $(OUT)/bitbuddy_c: $(OBJS_CUDD)
 	$(CC) -o $(OUT)/$@ $^ $(LBDD_CUDD) -DCUDD $(LDFLAGS)
+
+$(OUT)/bitbuddy_z: $(OBJS_ZCUDD)
+	$(CC) -o $(OUT)/$@ $^ $(LBDD_ZCUDD) -DZCUDD $(LDFLAGS)
 
 $(OUT)/bitbuddy_d: $(OBJS_SDD)
 	$(CC) -o $(OUT)/$@ $^ $(LBDD_SDD) -DSDD $(LDFLAGS)
