--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Compiled source #
-###################
+# Compiled source
 bitbuddy*
 *.dll
 *.exe
@@ -7,8 +6,10 @@ bitbuddy*
 *.so
 *.a
 
-# Packages #
-############
+# Random files
+*.tops
+
+# Packages
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -20,8 +21,7 @@ bitbuddy*
 *.tar
 *.zip
 
-# OS generated files #
-######################
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
